src/static/sass/header/_header.scss
// Header stylings.
// TODO: put them in a separated file or overwrite them directly from the source.
.container {
  margin-top: 200px;
}

.header {
  background-color: $clDark;
  color: $clWhite;
  font-family: $fontHeading;
  height: $headerHeight;
  margin-bottom: 150px;
  position: fixed;
  top: 0;
  user-select: none;
  width: 100%;
  z-index: 99999;

  h1, h2, h3, h4, h5 {
    font-family: $fontHeading;
  }

  p {
    padding: 20px;
  }

  .logo {
    background-image: $logoUrl;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: 207px;
    cursor: pointer;
    display: inline-block;
    height: $headerHeight;
    transition: opacity $transition;
    width: $logoWidth;

    &:hover {
      opacity: 0.75;
    }
  }

  .menu {
    cursor: pointer;
    display: inline-block;
    list-style: none;
    margin: 0;
    padding: 0;
    vertical-align: top;

    & > li {
      box-sizing: border-box;
      display: inline-block;
      height: $headerHeight;
      line-height: $headerHeight;
      margin: 0;
      padding: 0;
      transition: background-color $transition;

      &.active {
        background-color: lighten($clDark, 5);
        border-bottom: 6px solid $clBlue;
      }

      &:hover {
        background-color: lighten($clDark, 2);
      }

      a {
        box-sizing: border-box;
        height: 115px;
        line-height: 115px;
        padding: 40px;
      }
    }
  }

  .main {
    font-size: 1.55em;
    li {
      a {
        color: $clWhite;
      }
      a:hover {
        text-decoration: none;
      }
    }
  }

  .sub {
    font-size: 1.25em;
    margin-right: 10px;

    & > li {
      padding: 0;
      > a {
        color: lighten($clDark, 30);
        text-decoration: none;
        &:hover {
          color: lighten($clDark, 40);
        }

        &.active {
          color: lighten($clDark, 60);
        }
      }
    }
  }

  .right {
    display: inline-block;
    float: right;
    * a {
      color: $clWhite;
      padding: 0;
      text-decoration: none;
      &.userLink {
        color: $clDark;
      }
    }
    ul > li > a {
      padding: 40px 20px;
    }
  }

  .workspace {
    background-image: $arrowDownUrl;
    // active border will cause 'center' background image to move, so absolute pixels
    background-position: top 56px right 20px;
    background-repeat: no-repeat;
    box-sizing: border-box;
    display: inline-block;
    font-size: 1.55em;
    height: $headerHeight;
    margin-left: -4px;
    padding: 45px 50px 0 15px;
    position: relative;
    vertical-align: top;

    &.active {
      background-color: lighten($clDark, 2);
      border-bottom: 6px solid $clOrange;
    }

    &:hover {
      background-color: lighten($clDark, 5);
    }

    .icon-workspace {
      background-image: $iconWorkspaceUrl;
      background-repeat: no-repeat;
      background-position: center;
      display: inline-block;
      height: 30px;
      margin-right: 10px;
      margin-top: -2px;
      vertical-align: middle;
      width: 30px;
    }

    &:hover {
      .dropdown {
        display: block;
      }
    }

    .dropdown .projects {
      background-color: $clWhite;
      background-image: none;
      margin: 0;
      padding: 0;

      input {
        background-image: $iconSearchUrl;
        background-position: center right 10px;
        background-repeat: no-repeat;
        border: 0;
        border-bottom: 1px solid $clGreyDark;
        box-sizing: border-box;
        font-family: $fontBody;
        padding: 8px 10px;
        width: 100%;
      }

      ul {
        font-family: $fontBody;
        font-size: 0.84em;
        list-style: none;
        margin: 0;
        padding: 0;
        li {
          border-bottom: 1px solid $clGreyDark;
          overflow: hidden;
          padding: 8px 10px;
          text-overflow: ellipsis;
          white-space: nowrap;
          &:hover {
            background-color: $clGreyDark;
          }
        }
      }
    }
  }

  .account {
    background-image: $arrowRightUrl;
    background-repeat: no-repeat;
    // active border will cause 'center' background image to move, so absolute pixels
    background-position: top 52px right 20px;
    box-sizing: border-box;
    display: inline-block;
    font-size: 1.55em;
    height: $headerHeight;
    padding: 45px 50px 0 15px;
    position: relative;
    width: $accountWidth;

    &.login {
      cursor: pointer;
    }

    &.active {
      background-color: lighten($clDark, 2);
      border-bottom: 6px solid $clOrange;
    }

    &:hover {
      background-color: lighten($clDark, 5);
    }

    .icon-person {
      background-image: $iconPersonUrl;
      background-repeat: no-repeat;
      background-position: center;
      display: inline-block;
      float: left;
      height: 28px;
      margin-right: 10px;
      margin-top: -2px;
      vertical-align: top;
      width: 30px;
    }

    &.loggedin {
      padding-top: 35px;

      .username {
        display: block;
        font-family: $fontBody;
        font-size: 0.7em;
        margin-left: 40px;
        margin-top: 5px;
      }

      .icon-person {
        height: 50px;
      }
    }

    &:hover {
      .dropdown {
        display: block;
      }
    }

  }

  .dropdown {
    background-color: $clGreyDark;
    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
    box-sizing: border-box;
    color: $clDark;
    display: none;
    font-size: 0.80em;
    left: 0;
    list-style: none;
    margin: 0;
    padding: 0px;
    position: absolute;
    top: $headerHeight;
    width: $accountWidth;

    & > li {
      background-image: $arrowRightDarkUrl;
      background-repeat: no-repeat;
      background-position: center right 10px;
      border-bottom: 1px solid darken($clGreyDark, 10);
      cursor: pointer;
      padding: 10px 15px;

      &:hover {
        background-color: darken($clGreyDark, 2)
      }

      &.active {
        background-color: darken($clGreyDark, 5)
      }

      .count {
        background-color: $clOrange;
        border-radius: 25px;
        color: $clWhite;
        display: inline-block;
        float: right;
        font-size: 0.8em;
        font-weight: bold;
        margin-right: 15px;
        padding: 2px 4px 2px 4px;
      }
    }
  }
}

